hero section update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="archive_edge archive_edge-start">
                 <div class="profil">
                     <div class="profil_header">
-                        <h1>Welcome</h1>
+                        <br>Welcome </br> To My Portfolio</h1>
                     </div>
                     <div class="profil_content">
                         <div class="profil_content_avatar">
@@ -21,9 +21,19 @@
                         </div>
                         <div class="profil_content_name">
                             <p class="name">Mohamed Qobaich</p>
-                            <p>Photographer | Videographer | Graphic Designer</p>
+                            <p class="description">Photographer | Videographer | Graphic Designer</p>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="archive_edge_intro">
+                <div class="archive_edge_intro_text">
+                    <p>
+                        <span>Turning Ideas into Visual Art</span>
+                        <span>I capture moments, craft compelling</span>
+                        <span>videos, & design visuals that inspire.</span>
+                        <span>Let’s bring your vision to life.</span>
+                    </p>
                 </div>
             </div>
             <div class="archive_slider">
